@@ -1,3 +1,11 @@
+2004-10-16  Damien Sandras  <dsandras@gnome.org>
+
+	* configure.in, lib/Makefile.am, src/common.h, src/endpoint.cpp, 
+	src/endpoint.h, src/main_window.cpp: Removed the notification system.
+
+	* src/stunclient.cpp: Moved mutexes around so that the UI stays
+	reactive when detecting NAT type.
+
 2004-10-14  Damien Sandras  <dsandras@gnome.org>
 
 	* src/bonobo_component.cpp: Added config.h.
